Send diagnostics to the log instead of the console
Stack traces went to stdout in seven places and debug output in six more.
None of it reaches app.log, so on an installed copy - started without a
console - it went nowhere at all, and the failures it described left no
trace to investigate.

Three of the printStackTrace calls sat directly after a log.error that had
already recorded the same throwable, and are simply gone.
ApplicationDataWithToolbarIndexApp logged only e.getMessage() and printed the
trace, so it now logs the throwable. BackupController, BackgroundSlideshow,
FontColorDialog and PosView had no logger at all and have one now.

Two defects turned up in the lines being touched. BackupController read
ex.getMessage() and called contains() on it, so a failure carrying no message
threw a second time while reporting the first. And openSettingPrinter built
one command string with the printer name in quotes: Runtime.exec(String)
splits on whitespace and passes quotes through as ordinary characters, so a
printer whose name contains a space was never reached. It now passes the
arguments separately through ProcessBuilder, which needs no quoting.

Runtime.exec(String) is deprecated as of Java 18 and is gone from the
application. The one remaining use is DatabaseProcessHandler, reachable only
from MysqlDatabase, which nothing in the application calls; rewriting dead
code carries risk without benefit, so that constructor is marked deprecated
with an explanation of the same whitespace hazard, which points its callers
at the String[] form. Locale's deprecated constructor gives way to
Locale.of.

queryForObject returned null when a query matched several rows, which every
caller reads as "no such record", so a duplicate looked like a missing one.
The return value stays as it is - callers depend on null meaning not-found,
and picking a row arbitrarily would be worse - but it is no longer silent.

The System.out calls left in CryptoDatabaseConfig are its command line
output,